change location of bootstrap.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Sticky Footer Navbar Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.css" rel="stylesheet">
+    <link href="bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="custom.css" rel="stylesheet">
