--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
     <!-- Wrap all page content here -->
     <div id="wrap">
 
+
+      <!-- Side navbar -->
+      <ul class="nav nav-pills">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Messages</a></li>
+      </ul>
+      
       <!-- Fixed navbar -->
-      <div class="navbar navbar-default navbar-fixed-top">
+      <!--<div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -56,8 +64,9 @@
                 </ul>
               </li>
             </ul>
-          </div><!--/.nav-collapse -->
-        </div>
+          </div><!--/.nav-collapse 
+        </div> 
+        -->
       </div>
 
       <!-- Begin page content -->
