--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
 
 
       <!-- Side navbar -->
-      <ul class="nav nav-pills">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Messages</a></li>
-      </ul>
+      <div class="nav nav-pills nav-stacked">
+        <ul>
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Profile</a></li>
+          <li><a href="#">Messages</a></li>
+      
+        </ul>
+      </div>
       
       <!-- Fixed navbar -->
       <!--<div class="navbar navbar-default navbar-fixed-top">
