--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@
 
 
       <!-- Side navbar -->
-      <div class="nav nav-pills nav-stacked">
-        <ul>
+      <ul class="nav nav-pills nav-stacked">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">Profile</a></li>
           <li><a href="#">Messages</a></li>
-      
-        </ul>
-      </div>
+      </ul>
       
       <!-- Fixed navbar -->
       <!--<div class="navbar navbar-default navbar-fixed-top">
