--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li class="active"><a href="#dropdowns"><i class="icon-chevron-right"></i> Welcome</a></li>
             <li><a href="#typography"><i class="icon-chevron-right"></i> CIMG Conference 2013</a></li>
             <li><a href="#thumbnails"><i class="icon-chevron-right"></i> Speakers</a></li>
-            <li><a href="#alerts"><i class="class="glyphicon glyphicon-chevron-right"></i> Travel</li>
+            <li><a href="#alerts"><i class="glyphicon glyphicon-chevron-right"></i> Travel</li>
             <li><a href="#progress"><i class="icon-chevron-right"></i> Partners</a></li>
             <li><a href="#media"><i class="icon-chevron-right"></i> Register Now</a></li>
         </ul>
