--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <title>CIMG Conference 2013</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../ccss/bootstrap.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../ccss/custom.css" rel="stylesheet">
+    <link href="../css/custom.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
