--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>CIMG Conference 2013</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="/css/custom.css" rel="stylesheet">
