--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <title>CIMG Conference 2013</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/css/custom.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -32,9 +32,8 @@
       <div class="col-md-3">
         <ul class="nav nav-tabs nav-stacked">
             <li class="active"><a href="#dropdowns"><i class="icon-chevron-right"></i> Welcome</a></li>
-            <li><a href="#typography"><i class="icon-chevron-right"></i> CIMG Conference 2013 <i class="glyphicon glyphicon-chevron-right"></i></a></li>
+            <li><a href="#typography"> CIMG Conference 2013 <i class="glyphicon glyphicon-chevron-right"></i></a></li>
             <li><a href="#thumbnails"><i class="icon-chevron-right"></i> Speakers</a></li>
-            <li><a href="#travel"> Travel</li>
             <li><a href="#progress"><i class="icon-chevron-right"></i> Partners</a></li>
             <li><a href="#media"><i class="icon-chevron-right"></i> Register Now</a></li>
         </ul>
@@ -62,7 +61,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/js/jquery.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
